re-run less, fix broken links

--- a/portal/gil/templates/gil/alonzo_mccann_story.html
+++ b/portal/gil/templates/gil/alonzo_mccann_story.html
@@ -1,4 +1,4 @@
-{% extends "lived_experience_base.html" %}
+{% extends "gil/lived_experience_base.html" %}
 {% block title %}{{super()}} {{_("Lived Experience - Alonzo McCann Story")}}{% endblock %}
 {% block head %}{{super()}}{% endblock %}
 {% block main %}
