--- a/portal/templates/portal_footer.html
+++ b/portal/templates/portal_footer.html
@@ -38,12 +38,12 @@
       <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('gil.prostate_cancer_facts')}}">{{_("Prostate Cancer Facts")}}</a></li>
     </ul>
     <ul class="nav-list nav-list--lower">
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.terms_and_conditions')}}">{{_("Terms")}}</a></li>
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.privacy')}}">{{_("Privacy")}}</a></li>
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.contact')}}">{{_("Contact")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/terms">{{_("Terms")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/privacy">{{_("Privacy")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/contact">{{_("Contact")}}</a></li>
     </ul>
     <ul class="nav-list nav-list--lower">
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.contact')}}" ><img src="{{PORTAL}}{{url_for('static', filename='img/letter.png') }}">{{_("Contact Us")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/contact" ><img src="{{PORTAL}}{{url_for('static', filename='img/letter.png') }}">{{_("Contact Us")}}</a></li>
       <li class="nav-list__item"><a href="https://www.facebook.com/TrueNTH.ProstateCancer/" target="_blank"><img src="{{PORTAL}}{{url_for('static', filename='img/facebook.png') }}">{{_("Facebook")}}</a></li>
       <li class="nav-list__item"><a href="https://twitter.com/TrueNTH_US" target="_blank"><img src="{{PORTAL}}{{url_for('static', filename='img/twitter.png') }}">{{_("Twitter")}}</a></li>
     </ul>
