sort audits table, patient report table in desc order

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -883,6 +883,7 @@
                         pageList: [5, 10, 25, 50, 100],
                         classes: 'table table-responsive profile-patient-reports',
                         sortName: 'uploaded_at',
+                        sortOrder: 'desc',
                         search: true,
                         smartDisplay: true,
                         showToggle: true,
@@ -1068,6 +1069,7 @@
                                 pageList: [5, 10, 25, 50, 100],
                                 classes: 'table table-responsive profile-audit-log',
                                 sortName: 'lastUpdated',
+                                sortOrder: 'desc',
                                 search: true,
                                 smartDisplay: true,
                                 showToggle: true,
