--- a/portal/templates/portal_footer.html
+++ b/portal/templates/portal_footer.html
@@ -29,8 +29,8 @@
 <div id="tnthBottomNavWrapper">
     <div class="footer__logo-area"><figure class="footer__logo--truenth"></figure></div>
     <ul class="nav-list">
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.landing')}}">{{_("Home")}}</a></li>
-      <li class="nav-list__item"><a href="{{PORTAL}}{{url_for('portal.about')}}">{{_("About")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/">{{_("Home")}}</a></li>
+      <li class="nav-list__item"><a href="{{PORTAL}}/about">{{_("About")}}</a></li>
       <li class="nav-list__item"><a class="decision-support-link" href="{{PORTAL}}{{url_for('gil.decision_support')}}">{{_("Decision Support")}}</a></li>
       <li class="nav-list__item"><a class="symptom-tracker-link" href="{{PORTAL}}{{url_for('gil.symptom_tracker')}}">{{_("Symptom Tracker")}}</a></li>
     </ul>
