--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -462,6 +462,69 @@
      });</script>
     {%- endif -%}
 {%- endmacro %}
+{% macro profileEmailLog(person) -%}
+    <div id="emailLogContainer">
+        <div id="emailLogContent"></div>
+        <div id="emailLogMessage" class="error-message"></div>
+    </div>
+    <script>
+        $(function() {
+            tnthAjax.emailLog({{person.id}}, function(data) {
+                if (!data.error) {
+                    if (data.messages && data.messages.length > 0) {
+                        (data.messages).forEach(function(item) {
+                            item["sent_at"] = tnthDates.formatDateString(item["sent_at"], "iso");
+                        });
+                        $("#emailLogContent").append("<table id='profileEmailLogTable'></table>");
+                        $('#profileEmailLogTable').bootstrapTable( {
+                            data: data.messages,
+                            pagination: true,
+                            pageSize: 5,
+                            pageList: [5, 10, 25, 50, 100],
+                            classes: 'table table-responsive profile-email-log',
+                            sortName: 'sent_at',
+                            sortOrder: 'desc',
+                            search: true,
+                            smartDisplay: true,
+                            showColumns: true,
+                            toolbar: "#emailLogTableToolBar",
+                            rowStyle: function rowStyle(row, index) {
+                                  return {
+                                    css: {"background-color": (index % 2 != 0 ? "#F9F9F9" : "#FFF")}
+                                  };
+                            },
+                            undefinedText: '--',
+                            columns: [
+                                {
+                                    field: 'sent_at',
+                                    title: '{{_("Date (GMT), Y-M-D")}}',
+                                    searchable: true,
+                                    sortable: true
+                                },
+                                {
+                                    field: 'subject',
+                                    title: '{{_("Subject")}}',
+                                    searchable: true,
+                                    sortable: true
+                                }, {
+                                    field: 'recipients',
+                                    title: '{{_("Email")}}',
+                                    sortable: true,
+                                    searchable: true,
+                                    width: '20%'
+                                }
+                            ]
+                        });
+                    } else {
+                        $("#emailLogContent").html("<span class='text-muted'>" + "{{_('No audit entry found.')}}" + "</span>");
+                    };
+                } else {
+                    $("#emailLogMessage").text(data.error);
+                };
+            });
+        });
+    </script>
+{%- endmacro %}
 
 {% macro profilePhone(person) -%}
     <div id="phoneGroup" class="form-group float-input-label profile-section" data-loader-container="true">
@@ -2006,14 +2069,32 @@
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
                     <h4 id="communicationsLoc" class="profile-item-title index-item">{{ _("Communications") }}</h4>
-                    <div class="flex">
-                        <div id="resetPasswordContainer" class="flex-item">
-                            <p class="text-muted communication-prompt">{{_("Send reset password email to patient")}}</p>
-                            {{resetPassword(person)}}
+                    <div class="tabs-container">
+                        <div class="tab">
+                          <input id="tab-one" name="tabGroup" type="radio" data-validate="false" class="tab-input">
+                          <label for="tab-one" class="tab-label">{{_("Send reset password email to patient")}}</label>
+                          <div class="tab-content">
+                           {{resetPassword(person)}}
+                          </div>
                         </div>
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
-                        <div id="registrationEmailContainer" class="flex-item"><p class="text-muted communication-prompt registration-email-prompt">{{_("Send registration email to patient")}}</p>{{profileSendEmail(person, invite_email)}}</div>
+                        <div class="tab">
+                          <input id="tab-two" name="tabGroup" type="radio" data-validate="false" class="tab-input">
+                          <label for="tab-two" class="tab-label">{{_("Send registration email to patient")}}</label>
+                          <div class="tab-content">
+                            <div id="registrationEmailContainer">{{profileSendEmail(person, invite_email)}}</div>
+                          </div>
+                        </div>
                         {%- endif %}
+                        {% if current_user and (current_user.has_role(ROLE.STAFF) or current_user.has_role(ROLE.ADMIN) or current_user.has_role(ROLE.INTERVENTION_STAFF)) %}
+                         <div class="tab">
+                          <input id="tab-three" name="tabGroup" type="radio" data-validate="false" class="tab-input">
+                          <label for="tab-three" class="tab-label">{{_("Email audit log")}}</label>
+                          <div class="tab-content">
+                            {{profileEmailLog(person)}}
+                          </div>
+                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
