--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -311,8 +311,8 @@ select:not([multiple]) {
     position: relative;
     display: block;
     padding: 0 0.5em 0 2.5em;
-    background: #a4acaf;
-    color: #fff;
+    color: #777777;
+    border: 1px solid #b8babb;
     font-weight: normal;
     line-height: 3;
     cursor: pointer;
@@ -321,7 +321,7 @@ select:not([multiple]) {
   }
   label.tab-label.active,
   label.tab-label:hover {
-    background-color: @linkHover;
+    color: @linkHover;
   }
   .tab-content {
     max-height: 0;
@@ -343,7 +343,6 @@ select:not([multiple]) {
   /* Icon */
   label.tab-label::after {
     position: absolute;
-    /*right: 0;*/
     left: 0;
     top: 0;
     display: block;
